Release 2.0.3 (Unreleased)
==========================

Bug fixes:
----------

- Avoid crash in ple_locator_shift_location() for empty locator.

Release 2.0.2 (March 16, 2018)
==============================

Bug fixes:
----------

- Fix in ple_locator_extend_search() for non-local cases.

Changes:
--------

- Use asyncronous locator variable exchange by default when
  number of communicating ranks is not too large (< 128).

- Implement handling of point tags so as to ignore location
  on elements sharing tag (also requires matching features
  in ple_mesh_elements_locate_t function used.

Architectural changes
---------------------

- Add support for internationalization.

Release 2.0.1 (May 21, 2015)
============================

Bug fixes:
----------

- Fix in PLE locator indexing for ple_locator_extend_search().

Changes:
--------

- Improve Cray support.

Release 2.0.0 (April 30, 2015)
==============================

Changes:
--------

- Upgrade PLE API so as to allow multiple searches. This replaces the use of
  functions to locate closest elements, as using successive searches with
  increasing tolerance requires no specific function and is expected to have
  more stable behavior.

Release 1.0.4 (August 18, 2014)
===============================

Bug fixes:
----------

- Fix asynchronous exchange for ple_locator_exchange_point_var().

Changes:
--------

- Add Clang compiler detection.

- Updates in build scripts and MPI detection.

Release 1.0.3 (April 03, 2013)
==============================

Bug fixes:
----------

- Fix a test for "locate on closest" and another for empty realloc.

Release 1.0.2 (October 29, 2012)
================================

Bug fixes:
----------

- Fix extra count (should be 3, not 4) in PLE flags exchange in ple_locator.c.

- Fixes for mixed "locate on closest / do not locate on closest" cases.

Changes:
--------

- Avoid deprecated MPI datatypes to prepare for MPI 3.

- Improve robustness of MPI detection tests.
